# ProjectTails

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  ProjectTails.sln  README.md  Testing.txt  analysis.txt
ProjectTails/: :w  Act.cpp  Act.h  Animation.cpp  Animation.h  BlockEditor.cpp  BlockEditor.h  Camera.cpp  Camera.h  CollisionTile.cpp  CollisionTile.h  Constants.cpp  Constants.h  DataReader.cpp  DataReader.h  EntityTypes.cpp  Functions.cpp  Functions.h  Ground.cpp  Ground.h  InputComponent.h  LevelEditor.cpp  LevelEditor.h  Miscellaneous.cpp  Miscellaneous.h  PhysicsEntity.cpp  PhysicsEntity.h  Player.cpp  Player.h  PlayerTest.cpp  PlayerTest.h  ProjectTails.cpp  ProjectTails.rc  ProjectTails.vcxproj  ProjectTails.vcxproj.filters  ReadMe.txt  SoundHandler.cpp  Sprite.cpp  Sprite.h  Tests.cpp  (+15 more)
ProjectTails/include/: Act.h  BlockEditor.h  Camera.h  CollisionTile.h  Constants.h  DataReader.h  Drawing.h  EntityTypes.h  Functions.h  FunctionsImpl.h  Ground.h  Hitbox.h  InputComponent.h  LevelEditor.h  Miscellaneous.h  PhysicsEntity.h  Player.h  Shapes.h  SoundHandler.h  Sprite.h  Tests.h  Text.h  Typedefs.h  prhsGameLib.h
ProjectTails/src/: Act.cpp  Animation.cpp  BlockEditor.cpp  Camera.cpp  CollisionTile.cpp  DataReader.cpp  Drawing.cpp  EntityTypes.cpp  Functions.cpp  Ground.cpp  Hitbox.cpp  InputComponent.cpp  LevelEditor.cpp  Miscellaneous.cpp  PhysicsEntity.cpp  Player.cpp  ProjectTails.cpp  Shapes.cpp  SoundHandler.cpp  Tests.cpp  Text.cpp  Timer.cpp
TODOPutBackIn/: PlayerState.cpp  PlayerState.h
asset/: Act1Data (copy).txt  Act1Data.txt  Act1Data.txt.bak  Act2Data.txt  ActData (copy).txt  ActData - Copy.txt  ActData1 (copy).txt  ActTiles.txt  Emerald HillZone.bak  EmeraldHillBlock1.json  EmeraldHillBlock10.json  EmeraldHillBlock11.json  EmeraldHillBlock12.json  EmeraldHillBlock13.json  EmeraldHillBlock2.json  EmeraldHillBlock3.json  EmeraldHillBlock4.json  EmeraldHillBlock5.json  EmeraldHillBlock6.json  EmeraldHillBlock7.json  EmeraldHillBlock8.json  EmeraldHillBlock9.json  EntityData.txt  Link to Act1Data (another copy).txt  Test1.json  Tornado.pyxel  test.txt
asset/EmeraldHillZone/: Block1.json  Block1.json.bak  Block10.json  Block11.json  Block12.json.bak  Block13.json  Block14.json  Block14.json.bak  Block15.json  Block16.json  Block17.json  Block18.json.bak  Block19.json  Block2.json  Block20.json  Block21.json  Block22.json  Block22.json.bak  Block24.json  Block24.json.bak  Block25.json  Block25.json.bak  Block26.json  Block26.json.bak  Block27.json  Block27.json.bak  Block28.json  Block29.json  Block29.json.bak  Block3.json  Block30.json  Block30.json.bak  Block31.json  Block31.json.bak  Block32.json  Block32.json.bak  Block33.json  Block33.json.bak  Block34.json  Block34.json.bak  (+13 more)
asset/Tails/: .test.sh.swp  Crouch  Roll_Tails  Spindash
cmake/: FindSDL2_mixer.cmake
doc/: Notes.txt  PlayerStateMachine.fzm
include/: Animation.h  CollisionTile.h  Constants.h  Functions.h  Ground.h  LevelEditor.h  Version.h  stdafx.h
spritesheets/: EmeraldHillBackground2.pyxel  EmeraldHillBlock10.pyxel  EmeraldHillBlock11.pyxel  EmeraldHillBlock12.pyxel  EmeraldHillBlock3.pyxel  EmeraldHillBlock8.pyxel  EmeraldHillZone.pyxel  SolidTiles1.pyxel  T1.pyxel  Tails_Act_Clear.pyxel  Tails_Corkscrew.pyxel  Tails_Fly.pyxel  Tails_Fly_Tired.pyxel  Tails_Idle.pyxel  Tails_Run.pyxel  Tails_Spindash.pyxel  TitleScreen.pyxel
spritesheets/tempspritesheets/: CrabBadnikWalk.pyxel  CrabIdle.pyxel  EHZBoss.pyxel  EmeraldHillBackground1.pyxel  EmeraldHillBlock1.json  EmeraldHillBlock1.pyxel  EmeraldHillBlock12.json  EmeraldHillBlock13.pyxel  EmeraldHillBlock2.json  EmeraldHillBlock2.pyxel  EmeraldHillBlock4.pyxel  EmeraldHillBlock5.json  EmeraldHillBlock5.pyxel  Rain.pyxel  (+19 more)
src/: Camera.cpp  EntityTypes.cpp  InputComponent.cpp  PhysicsEntity.cpp  ProjectTails.cpp  effectManager.cpp  prhsGameLib.cpp
(+65 files in other folders)
